[gd_scene load_steps=5 format=3 uid="uid://utnlu843tfrl"]

[ext_resource type="Script" path="res://scripts/meteor.gd" id="1_fimve"]
[ext_resource type="Texture2D" uid="uid://codijwnnrmr80" path="res://graphics/meteors/Meteor Big.png" id="1_v634b"]
[ext_resource type="AudioStream" uid="uid://dpef1pc61bwqf" path="res://audio/Explosion.wav" id="3_4jthv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_annmi"]
radius = 45.0999

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_fimve")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v634b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_annmi")

[node name="explosion_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4jthv")
volume_db = -8.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
